' Generated by UML Generator
' Encoded: ZLDTRu8m57tdLzn7pCJicMn6uyEoH1CJuvFneT8xR0OjQIkC6VtjQmiKXbco5zfxUZzEpoaBfOdKbpmBr2VZ1P4aXoGZIYsrbknqqVYU2BvZtmZFmPbHX8J99CCWS5cmDTNCn70D09w-Oc1SsrtjTsKFbZsg2aJgeqHaGiQmCoDvsXnBfZ66KwtHn55amLoK64vYA0MZDgQIL652U4bK32ktTgUtZby3D-nS_h3puJY5XjqKwdRzHUMXtPupxPhT_Qtk_bBt2aaX-5PKA3kiOMxBml6aSVR4PdumYKiT6bDIrB6RDuMKv8Rnc_a-4BAW8nGLhHD6YpLJ-gLpPWwlmB62fPIaTYVpSEAP4KgxnB3h47jN1s9tXojnuTgwq5ht7nDsJlEr81HbOyNLF3lJxWQP0SrWVHv8tbZJbsym5xBUQvQDYarRRhLA__HhGnWV5UK62esygYiw70Tb_ZtFPlFsEe4ptSPsqqTM-i3fBwB8IzOWW-e5Sch-hny
' URL: http://www.plantuml.com/plantuml/uml/ZLDTRu8m57tdLzn7pCJicMn6uyEoH1CJuvFneT8xR0OjQIkC6VtjQmiKXbco5zfxUZzEpoaBfOdKbpmBr2VZ1P4aXoGZIYsrbknqqVYU2BvZtmZFmPbHX8J99CCWS5cmDTNCn70D09w-Oc1SsrtjTsKFbZsg2aJgeqHaGiQmCoDvsXnBfZ66KwtHn55amLoK64vYA0MZDgQIL652U4bK32ktTgUtZby3D-nS_h3puJY5XjqKwdRzHUMXtPupxPhT_Qtk_bBt2aaX-5PKA3kiOMxBml6aSVR4PdumYKiT6bDIrB6RDuMKv8Rnc_a-4BAW8nGLhHD6YpLJ-gLpPWwlmB62fPIaTYVpSEAP4KgxnB3h47jN1s9tXojnuTgwq5ht7nDsJlEr81HbOyNLF3lJxWQP0SrWVHv8tbZJbsym5xBUQvQDYarRRhLA__HhGnWV5UK62esygYiw70Tb_ZtFPlFsEe4ptSPsqqTM-i3fBwB8IzOWW-e5Sch-hny
' Generated on: 2026-01-19T15:20:27.524592488

@startuml
skinparam classAttributeIconSize 0
hide circle

class Particle {
  +x: int
  +y: int
  +vx: int
  +vy: int
  +speed: int
  +color: String
  +sprite: byte
  --
  +move(): void
  +draw(canvas: Canvas): void
}

class Canvas {
  +draw(sprite: byte[], x: int, y: int, color: String): void
}

class Unit {
  ~x: int
  ~y: int
  ~weaponPower: int
  --
  +Unit(x: int, y: int, weaponPower: int)
  +fireAt(target: Unit, game: Game): void
}

class Game {
  -particles: List<Particle> = new ArrayList<>()
  --
  +addParticle(particle: Particle): void
  +particleCount(): int
  +draw(canvas: Canvas): void
}

class SpriteLoader {
  +{static} load(path: String): byte[]
}

class MemoryUtil {
  +{static} print(tag: String): void
}

class Main {
  +{static} main(args: String[]): void
}

Particle ..> Canvas
Unit ..> Unit
Unit ..> Game
Game o-- Particle
Game ..> Canvas
@enduml